--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "lint:staged": "lint-staged"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
+    "monaco-editor": "^0.50.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^13.3.1",
@@ -27,7 +29,7 @@
     "react-router": "^6.11.0",
     "react-router-dom": "^6.11.0",
     "redux-devtools-extension": "^2.13.9",
-    "styled-components": "^6.0.7",
+    "styled-components": "^6.1.11",
     "svg-component-vite-plugin": "^0.3.2"
   },
   "devDependencies": {
